# DiscordBotProjectManager

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
src/: bot.py  settings.py
src/cogs/: default.py
