[tool.poetry]
name = "discord-project-mngr"
version = "0.1.0"
description = "A simple project manager bot for discord"
authors = ["AJXD2 <aj@ajxd2.dev>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
disnake = "^2.9.2"
rich = "^13.7.1"
mongoengine = "^0.28.2"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
